--- a/recipefinder/DESCRIPTION
+++ b/recipefinder/DESCRIPTION
@@ -1,11 +1,8 @@
 Package: recipefinder
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Finding Recipes Based on Your Ingredients
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Anastasiia Galiagina
+Description: An R package that suggests recipes based on ingredients you already have at home.
 Encoding: UTF-8
 LazyData: true
